tests/negative/neg_pr115_var_declare_item.safe
package neg_pr115_var_declare_item

   type counter is range 0 to 10;

   type holder is record
      var temp : counter = 0;


